--- a/DRS-BATCH-PROCESSING/BB_tbrc/BB_tbrcLic-Doc-Donor/project.conf
+++ b/DRS-BATCH-PROCESSING/BB_tbrc/BB_tbrcLic-Doc-Donor/project.conf
@@ -5,17 +5,18 @@
         <property name="successMethod" value="all"/>
         <property name="projectName" value="BB_tbrcLic-Doc-Ownr"/>
         <property name="projectDescription" value="TBRC License, Documentation and Agreement of Deposit PDF objects"/>
-        <property name="successEmail" value="devs@tbrc.org"/>
-        <property name="failureEmail" value="devs@tbrc.org"/>
-        <property name="depositAgent" value="01814776"/>
+        <property name="depositAgent" value="1130356"/>
+        <property name="depositAgentEmail" value="travis@tbrc.org"/>
+        <property name="successEmail" value="travis@tbrc.org"/>
+        <property name="failureEmail" value="travis@tbrc.org"/>
     </metadataCategory>
     <directory name="OBJECT TEMPLATE">
         <metadataCategory name="objectMetadata">
             <property name="accessFlag" value="R"/>
             <property name="ownerCode" value="FHCL.COLL"/>
+            <property name="producer" value="Tibetan Buddhist Resource Center (id=22344)"/>
+            <property name="adminCategory" value="Vitaly's2 (id=66955)"/>
             <property name="billingCode" value="FHCL.COLL.TBRC_0001"/>
-            <property name="adminCategory" value="VZ's test objects (id=245)"/>
-            <property name="producer" value="Tibetan Buddhist Resource Center (id=802)"/>
         </metadataCategory>
         <metadataCategory name="nrsMetadata">
             <property name="resourceNamePattern" value="{n}"/>
@@ -30,13 +31,14 @@
             <metadataCategory name="fileMetadata">
                 <property name="isFirstGenerationInDrs" value="yes"/>
                 <property name="usageClass" value="LOWUSE"/>
+                <property name="fileproducer" value="Tibetan Buddhist Resource Center (id=22344)"/>
             </metadataCategory>
             <metadataCategory name="documentFileMetadata">
-                <property name="role" value="ARCHIVAL_MASTER"/>
-                <property name="role" value="PRODUCTION_MASTER"/>
-                <property name="role" value="DELIVERABLE"/>
-                <property name="role" value="DOCUMENTATION"/>
-                <property name="role" value="LICENSE"/>
+                <property name="filerole" value="ARCHIVAL_MASTER"/>
+                <property name="filerole" value="PRODUCTION_MASTER"/>
+                <property name="filerole" value="DELIVERABLE"/>
+                <property name="filerole" value="DOCUMENTATION"/>
+                <property name="filerole" value="LICENSE"/>
             </metadataCategory>
         </directory>
     </directory>
