--- a/DRS-BATCH-PROCESSING/BB_tbrc/BB_tbrcMeth/project.conf
+++ b/DRS-BATCH-PROCESSING/BB_tbrc/BB_tbrcMeth/project.conf
@@ -5,25 +5,32 @@
         <property name="successMethod" value="email"/>
         <property name="projectName" value="BB_tbrcMeth"/>
         <property name="projectDescription" value="TBRC Methodology text"/>
-        <property name="successEmail" value="devs@tbrc.org"/>
-        <property name="failureEmail" value="devs@tbrc.org"/>
-        <property name="depositAgent" value="01814776"/>
+        <property name="successEmail" value="travis@tbrc.org"/>
+        <property name="failureEmail" value="travis@tbrc.org"/>
+        <property name="depositAgent" value="11303056"/>
+        <property name="depositAgentEmail" value="travis@tbrc.org"/>
     </metadataCategory>
     <directory name="OBJECT TEMPLATE">
         <metadataCategory name="objectMetadata">
             <property name="ownerCode" value="FHCL.COLL"/>
             <property name="billingCode" value="FHCL.COLL.TBRC_0001"/>
             <property name="accessFlag" value="R"/>
+            <property name="adminCategory" value="Vitaly's Test Content edited (id=22265)"/>
         </metadataCategory>
         <metadataCategory name="nrsMetadata">
             <property name="resourceNamePattern" value="{n}"/>
             <property name="urnAuthorityPath" value="FHCL"/>
         </metadataCategory>
+        <metadataCategory name="textObjectMetadata">
+            <property name="role" value="DOCUMENTATION"/>
+        </metadataCategory>
         <directory name="textTBRC_text">
             <metadataCategory name="fileMetadata">
                 <property name="usageClass" value="LOWUSE"/>
-                <property name="accessFlag" value="P"/>
+                <property name="fileAccessFlag" value="P"/>
                 <property name="isFirstGenerationInDrs" value="yes"/>
+                <property name="fileAdminCategory" value="Vitaly's Test Content edited (id=22265)"/>
+                <property name="fileproducer" value="Tibetan Buddhist Resource Center (id=22344)"/>
             </metadataCategory>
         </directory>
     </directory>
