Cleanup: fix indexing, remove git from Windhorse

--- a/DRS-BATCH-PROCESSING/BB_tbrc/BB_tbrc2drs/project.conf
+++ b/DRS-BATCH-PROCESSING/BB_tbrc/BB_tbrc2drs/project.conf
@@ -5,9 +5,10 @@
         <property name="successMethod" value="all"/>
         <property name="projectName" value="tbrc2drs"/>
         <property name="projectDescription" value="testing BB for depositing TBRC archive"/>
-        <property name="depositAgent" value="01814776"/>
-        <property name="successEmail" value="devs@tbrc.org"/>
-        <property name="failureEmail" value="devs@tbrc.org"/>
+        <property name="depositAgent" value="10684323"/>
+        <property name="depositAgentEmail" value="jimk@tbrc.org"/>
+        <property name="successEmail" value="jimk@tbrc.org"/>
+        <property name="failureEmail" value="jimk@tbrc.org"/>
     </metadataCategory>
     <directory name="OBJECT TEMPLATE">
         <metadataCategory name="objectMetadata">
@@ -16,9 +17,15 @@
             <property name="accessFlag" value="R"/>
             <property name="processingLevel" value="minimal"/>
             <property name="has_methodology" value="urn-3:HUL.DRS.OBJECT:352060"/>
-            <property name="harvardMetadataLinks" value="Type=Aleph --- Identifier=hollis-id"/>
+
+            <!-- Label added per Vitaly 11/15/2017 note 3 values <sp> dash dash dash <sp> e.g. namespace of value like "HOLLIS"  any literal, blanks & punct and symbols ok, except commas, ; -->
+
+            <property name="harvardMetadataLinks" value="Type=Aleph --- Identifier=hollis-id --- Label=HOLLIS-ID"/>
             <property name="has_documentation" value="urn-3:HUL.DRS.OBJECT:404797"/>
-            <property name="producer" value="Wallman, Jeffrey (id=826)"/>
+
+            <!-- <property name="producer" value="Wallman, Jeffrey (id=826)"/> -->
+<!-- This id, 22764 is on the QA site -->
+            <property name="producer" value="Wallman, Jeffrey (id=22764)"/>
         </metadataCategory>
         <metadataCategory name="nrsMetadata">
             <property name="resourceNamePattern" value="{n}"/>
@@ -33,20 +40,25 @@
             <property name="license" value="urn-3:HUL.DRS.OBJECT:404795"/>
         </metadataCategory>
         <metadataCategory name="importMetadata">
-            <property name="alephID" value="hollis-id"/>
+                 <property name="alephID" value="hollis-id"/>             
+        </metadataCategory>
+           <metadataCategory name="nrsPDSMetadata">
+            <property name="objectResourceNamePattern" value="{n}"/>
         </metadataCategory>
         <directory name="image">
             <metadataCategory name="fileMetadata">
                 <property name="isFirstGenerationInDrs" value="yes"/>
                 <property name="usageClass" value="HIGHUSE"/>
-                <property name="producer" value="Wallman, Jeffrey (id=826)"/>
+                <!-- Prod id = 826, QA == 22764 -->
+                <!-- Can also use Tibetan Buddhist Resource Center (isd=????) See Qa enviro -->
+                <property name="producer" value="Wallman, Jeffrey (id=22764)"/>
             </metadataCategory>
             <metadataCategory name="pdsDocumentImageFileMetadata">
                 <property name="role" value="ARCHIVAL_MASTER"/>
                 <property name="role" value="DELIVERABLE"/>
                 <property name="role" value="THUMBNAIL"/>
             </metadataCategory>
-            <directory name="image-deliverable"/>
+          <directory name="image-deliverable"/>
         </directory>
     </directory>
 </Projectconfig>
