Changes to fix ingestion errors
correct the billing code

--- a/DRS-BATCH-PROCESSING/BB_tbrc/LinkToAgreeEtc/QA/BB_LinkProject/project.conf
+++ b/DRS-BATCH-PROCESSING/BB_tbrc/LinkToAgreeEtc/QA/BB_LinkProject/project.conf
@@ -13,7 +13,7 @@
     <directory name="OBJECT TEMPLATE">
         <metadataCategory name="objectMetadata">
             <property name="ownerCode" value="FHCL.COLL"/>
-            <property name="billingCode" value="FHCL.COLL_TBRC_0001"/>
+            <property name="billingCode" value="FHCL.COLL.TBRC_0001"/>
             <property name="accessFlag" value="R"/>
             <property name="adminCategory" value="Vitaly's2 (id=66955)"/>
             <property name="producer" value="Tibetan Buddhist Resource Center (id=22344)"/>
