Add documentation, remove unused directory

--- a/DRS-BATCH-PROCESSING/BB_tbrc/BB_tbrc2drs/project.conf
+++ b/DRS-BATCH-PROCESSING/BB_tbrc/BB_tbrc2drs/project.conf
@@ -1,10 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!-- 
+jimk 25-I-18: URNs for 
+    has_methodology: urn-3:HUL.DRS.OBJECT:679559 
+                Object URN                      File-URN
+agreement: add urn-3:HUL.DRS.OBJECT:679555      urn-3:FHCL:679558
+copyright:     urn-3:HUL.DRS.OBJECT:679554      urn-3:FHCL:679556
+documentation: urn-3:HUL.DRS.OBJECT:679553      urn-3:FHCL:679557
+methodology:   urn-3:HUL.DRS.OBJECT:679559      urn-3:FHCL:679560
+
+are from drs-deposit/output/Results/DepositReport/QA2018
+You can browse the files they refer to by giving the file URN 
+corresponding to the document as an argument to
+http://nrstest.harvard.edu:9031/ 
+For example: http://nrstest.harvard.edu:9031/urn-3:fhcl:679558
+
+!!! You must be in  the VPN to access this URL 
+ 
+     
+-->
 <Projectconfig genre="pds document">
     <metadataCategory name="projectMetadata">
         <property name="batchName" value="{owner}_{batchDir}_{yyyy}{mo}{dd}_{hh24}{mm}{ss}"/>
         <property name="successMethod" value="all"/>
         <property name="projectName" value="tbrc2drs"/>
-        <property name="projectDescription" value="testing BB for depositing TBRC archive"/>
+        <property name="projectDescription" value="QA BatchBuilder for depositing TBRC archive"/>
         <property name="depositAgent" value="10684323"/>
         <property name="depositAgentEmail" value="jimk@tbrc.org"/>
         <property name="successEmail" value="jimk@tbrc.org"/>
@@ -16,12 +35,12 @@
             <property name="billingCode" value="FHCL.COLL.TBRC_0001"/>
             <property name="accessFlag" value="R"/>
             <property name="processingLevel" value="minimal"/>
-            <property name="has_methodology" value="urn-3:HUL.DRS.OBJECT:352060"/>
+            <property name="has_methodology" value="urn-3:HUL.DRS.OBJECT:679559"/>
 
             <!-- Label added per Vitaly 11/15/2017 note 3 values <sp> dash dash dash <sp> e.g. namespace of value like "HOLLIS"  any literal, blanks & punct and symbols ok, except commas, ; -->
 
             <property name="harvardMetadataLinks" value="Type=Aleph --- Identifier=hollis-id --- Label=HOLLIS-ID"/>
-            <property name="has_documentation" value="urn-3:HUL.DRS.OBJECT:404797"/>
+            <property name="has_documentation" value="urn-3:HUL.DRS.OBJECT:679553"/>
 
             <!-- <property name="producer" value="Wallman, Jeffrey (id=826)"/> -->
 <!-- This id, 22764 is on the QA site -->
@@ -36,8 +55,8 @@
             <property name="idsDeliverableURNs" value="yes"/>
         </metadataCategory>
         <metadataCategory name="otherRightsMetadata">
-            <property name="license" value="urn-3:HUL.DRS.OBJECT:404793"/>
-            <property name="license" value="urn-3:HUL.DRS.OBJECT:404795"/>
+            <property name="license" value="urn-3:HUL.DRS.OBJECT:679555"/>
+         
         </metadataCategory>
         <metadataCategory name="importMetadata">
                  <property name="alephID" value="hollis-id"/>             
@@ -58,7 +77,8 @@
                 <property name="role" value="DELIVERABLE"/>
                 <property name="role" value="THUMBNAIL"/>
             </metadataCategory>
-          <directory name="image-deliverable"/>
+            <!-- jimk 29-I-18: slows down processing, not used -->
+<!--           <directory name="image-deliverable"/> -->
         </directory>
     </directory>
 </Projectconfig>
