Batch Build production
These files were changed or added as a result of running BatchBuilder 2.2.13 against the production DRS.

--- a/DRS-BATCH-PROCESSING/BB_tbrc/BB_tbrcLicDoc2018/project.conf
+++ b/DRS-BATCH-PROCESSING/BB_tbrc/BB_tbrcLicDoc2018/project.conf
@@ -4,7 +4,7 @@
         <property name="batchName" value="{owner}_{batchDir}_{yyyy}{mo}{dd}_{hh24}{mm}{ss}"/>
         <property name="successMethod" value="all"/>
         <property name="projectName" value="CopyrightLicenseDoc2018"/>
-        <property name="projectDescription" value="QA Versions of Donor Agreement (license), Copyright, and Documentation"/>
+        <property name="projectDescription" value="Versions of Donor Agreement (license), Copyright, and Documentation"/>
         <property name="successEmail" value="jimk@tbrc.org"/>
         <property name="depositAgent" value="10864323"/>
         <property name="depositAgentEmail" value="jimk@tbrc.org"/>
@@ -15,8 +15,8 @@
             <property name="ownerCode" value="FHCL.COLL"/>
             <property name="billingCode" value="FHCL.COLL.TBRC_0001"/>
             <property name="accessFlag" value="R"/>
-            <property name="adminCategory" value="Vitaly's2 (id=66955)"/>
-            <property name="producer" value="Tibetan Buddhist Resource Center (id=22344)"/>
+            <property name="adminCategory" value="Buddhist Digital Resource Center (id=169937)"/>
+            <property name="producer" value="Tibetan Buddhist Resource Center (id=802)"/>
         </metadataCategory>
         <metadataCategory name="nrsMetadata">
             <property name="resourceNamePattern" value="{n}"/>
