--- a/DRS-BATCH-PROCESSING/BB_tbrc/BB_tbrcMeth2018/project.conf
+++ b/DRS-BATCH-PROCESSING/BB_tbrc/BB_tbrcMeth2018/project.conf
@@ -3,20 +3,20 @@
     <metadataCategory name="projectMetadata">
         <property name="batchName" value="{owner}_{batchDir}_{yyyy}{mo}{dd}_{hh24}{mm}{ss}"/>
         <property name="successMethod" value="all"/>
-        <property name="projectName" value="BB_tbrcMeth"/>
-        <property name="projectDescription" value="TBRC Methodology text"/>
-        <property name="depositAgent" value="10684323"/>
-        <property name="depositAgentEmail" value="jimk@tbrc.org"/>
+        <property name="projectName" value="BDRCMethodology"/>
+        <property name="projectDescription" value="Methodology document project"/>
         <property name="successEmail" value="jimk@tbrc.org"/>
         <property name="failureEmail" value="jimk@tbrc.org"/>
+        <property name="depositAgent" value="10684323"/>
+        <property name="depositAgentEmail" value="jimk@tbrc.org"/>
     </metadataCategory>
     <directory name="OBJECT TEMPLATE">
         <metadataCategory name="objectMetadata">
-            <property name="ownerCode" value="FHCL.COLL"/>
             <property name="billingCode" value="FHCL.COLL.TBRC_0001"/>
+            <property name="ownerCode" value="FHCL.COLL"/>
             <property name="accessFlag" value="R"/>
-            <property name="adminCategory" value="Vitaly's Test Content edited (id=22265)"/>
-            <property name="producer" value="Tibetan Buddhist Resource Center (id=22344)"/>
+            <property name="adminCategory" value="Buddhist Digital Resource Center (id=169937)"/>
+            <property name="producer" value="Tibetan Buddhist Resource Center (id=802)"/>
         </metadataCategory>
         <metadataCategory name="nrsMetadata">
             <property name="resourceNamePattern" value="{n}"/>
@@ -25,16 +25,13 @@
         <metadataCategory name="textObjectMetadata">
             <property name="role" value="DOCUMENTATION"/>
         </metadataCategory>
-        <directory name="textTBRC_text">
+        <directory name="text">
             <metadataCategory name="fileMetadata">
                 <property name="usageClass" value="LOWUSE"/>
                 <property name="fileAccessFlag" value="P"/>
                 <property name="isFirstGenerationInDrs" value="yes"/>
-                <property name="fileAdminCategory" value="Vitaly's Test Content edited (id=22265)"/>
-                <property name="fileproducer" value="Tibetan Buddhist Resource Center (id=22344)"/>
-            </metadataCategory>
-            <metadataCategory name="textFileMetadata">
-                <property name="filerole" value="DOCUMENTATION"/>
+                <property name="fileAdminCategory" value="Buddhist Digital Resource Center (id=169937)"/>
+                <property name="fileproducer" value="Tibetan Buddhist Resource Center (id=802)"/>
             </metadataCategory>
         </directory>
     </directory>
