Add agreement to other rights metadata

--- a/DRS-BATCH-PROCESSING/BB_tbrc/BB_tbrc2drs/project.conf
+++ b/DRS-BATCH-PROCESSING/BB_tbrc/BB_tbrc2drs/project.conf
@@ -31,6 +31,7 @@
         </metadataCategory>
         <metadataCategory name="otherRightsMetadata">
             <property name="license" value="urn-3:HUL.DRS.OBJECT:35013887"/>
+            <property name="license" value="urn-3:HUL.DRS.OBJECT:35013885"/>
         </metadataCategory>
         <metadataCategory name="additionalPDSURNs">
             <property name="idsDeliverableURNs" value="yes"/>
