--- a/DRS-BATCH-PROCESSING/BB_tbrc/BB_tbrc2drs/project.conf
+++ b/DRS-BATCH-PROCESSING/BB_tbrc/BB_tbrc2drs/project.conf
@@ -2,7 +2,7 @@
 <Projectconfig genre="pds document">
     <metadataCategory name="projectMetadata">
         <property name="batchName" value="{owner}_{batchDir}_{yyyy}{mo}{dd}_{hh24}{mm}{ss}"/>
-        <property name="successMethod" value="all"/>
+        <property name="successMethod" value="dropbox"/>
         <property name="projectName" value="BDRC Work Upload"/>
         <property name="projectDescription" value="One Volume of a work in HUL PDS structure.&#xa;With agreement, license, documentation,&#xa;and methodology."/>
         <property name="successEmail" value="jimk@tbrc.org"/>
