Python to generate SQL for list of outlines

--- a/DBApps/conf/drsBatch.config
+++ b/DBApps/conf/drsBatch.config
@@ -1,5 +1,6 @@
 #
 # Semi-secure mysql config/ ~/drs.cnf is not kept in source control
+# Indirect access to configuration sections in ~/drs.cnf
 [mysql]
 mySqlCnfPath = "~/drs.cnf"
 
