Change additional file IDS parameter to no

--- a/DRS-BATCH-PROCESSING/BB_tbrc/BB_tbrc2drs/project.conf
+++ b/DRS-BATCH-PROCESSING/BB_tbrc/BB_tbrc2drs/project.conf
@@ -34,7 +34,7 @@
             <property name="license" value="urn-3:HUL.DRS.OBJECT:35013885"/>
         </metadataCategory>
         <metadataCategory name="additionalPDSURNs">
-            <property name="idsDeliverableURNs" value="yes"/>
+            <property name="idsDeliverableURNs" value="no"/>
         </metadataCategory>
         <metadataCategory name="importMetadata">
             <property name="alephID" value="hollis-id"/>
