Rework DB loading for better practices

--- a/DBApps/conf/drsBatch.config
+++ b/DBApps/conf/drsBatch.config
@@ -2,7 +2,7 @@
 # Semi-secure mysql config/ ~/drs.cnf is not kept in source control
 # Indirect access to configuration sections in ~/drs.cnf
 [mysql]
-mySqlCnfPath = "~/drs.cnf"
+mySqlCnfPath = ~/drs.cnf
 
 [dev]
 server = ubu1610
