Remove funny extension handling

--- a/DBApps/conf/drsBatch.config
+++ b/DBApps/conf/drsBatch.config
@@ -10,6 +10,9 @@ server = ubu1610
 [prod]
 server = RDSAWSClient
 
+[qa]
+server = RDSAWSQAClient
+
 [web]
 outlineURI = "https://www.tbrc.org/public?module=outlines&query=outline&arg="
 outlinePerWorkURI = "https://www.tbrc.org/public?module=outline&query=texts&arg="
