Add DRS Design document, images

--- a/DRS-BATCH-PROCESSING/BB_tbrc/BB_tbrcOutline/project.conf
+++ b/DRS-BATCH-PROCESSING/BB_tbrc/BB_tbrcOutline/project.conf
@@ -11,6 +11,8 @@
             <property name="ownerCode" value="FHCL.COLL"/>
             <property name="billingCode" value="FHCL.COLL.TBRC_0001"/>
             <property name="accessFlag" value="R"/>
+            <property name="harvardMetadataLinks" value="Type=Aleph --- Identifier=hollis-id --- Label=HOLLIS-ID"/>
+
         </metadataCategory>
         <metadataCategory name="nrsMetadata">
             <property name="resourceNamePattern" value="{n}"/>
