WIP: Class based args.

--- a/DBApps/conf/drsBatch.config
+++ b/DBApps/conf/drsBatch.config
@@ -1,5 +1,5 @@
 #
-# Semi-secure mysql config/ ~/drs.cnf is not kept in source control
+# Semi-secure mysql dbConfig/ ~/drs.cnf is not kept in source control
 # Indirect access to configuration sections in ~/drs.cnf
 [mysql]
 mySqlCnfPath = ~/drs.cnf
