--- a/RelatedURNInject/project1/project.conf
+++ b/RelatedURNInject/project1/project.conf
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Projectconfig genre="pds document">
+<!-- test push credentials -->
     <metadataCategory name="projectMetadata">
         <property name="batchName" value="{owner}_{batchDir}_{yyyy}{mo}{dd}_{hh24}{mm}{ss}"/>
         <property name="successMethod" value="all"/>
