update outline config to prod, clean up DRS outline

--- a/DRS-BATCH-PROCESSING/BB_tbrc/BB_tbrcOutline/project.conf
+++ b/DRS-BATCH-PROCESSING/BB_tbrc/BB_tbrcOutline/project.conf
@@ -16,8 +16,8 @@
             <property name="billingCode" value="FHCL.COLL.TBRC_0001"/>
             <property name="accessFlag" value="R"/>
             <property name="harvardMetadataLinks" value="Type=Aleph --- Identifier=hollis-id --- Label=HOLLIS-ID"/>
-            <property name="adminCategory" value="Tibetan Buddhist Resource Center (id=78744)"/>
-            <property name="producer" value="Tibetan Buddhist Resource Center (id=22344)"/>
+             <property name="adminCategory" value="Buddhist Digital Resource Center (id=169937)"/>
+            <property name="producer" value="Tibetan Buddhist Resource Center (id=802)"/>
             <property name="has_documentation" value="urn-3:HUL.DRS.OBJECT:352108"/>
             <property name="has_methodology" value="urn-3:HUL.DRS.OBJECT:352060"/>
         </metadataCategory>
@@ -33,9 +33,10 @@
         </metadataCategory>
         <directory name="textOutlineTTL">
             <metadataCategory name="fileMetadata">
-                <property name="usageClass" value="HIGHUSE"/>
+                <property name="usageClass" value="LOWUSE"/>
                 <property name="fileAccessFlag" value="P"/>
                 <property name="isFirstGenerationInDrs" value="yes"/>
+                <property name="fileproducer" value="Tibetan Buddhist Resource Center (id=802)"/>
             </metadataCategory>
         </directory>
     </directory>
