Set project.confs to prod from QA./

--- a/DRS-BATCH-PROCESSING/BB_tbrc/BB_tbrcOutline/project.conf
+++ b/DRS-BATCH-PROCESSING/BB_tbrc/BB_tbrcOutline/project.conf
@@ -18,8 +18,8 @@
             <property name="harvardMetadataLinks" value="Type=Aleph --- Identifier=hollis-id --- Label=HOLLIS-ID"/>
              <property name="adminCategory" value="Buddhist Digital Resource Center (id=169937)"/>
             <property name="producer" value="Tibetan Buddhist Resource Center (id=802)"/>
-            <property name="has_documentation" value="urn-3:HUL.DRS.OBJECT:352108"/>
-            <property name="has_methodology" value="urn-3:HUL.DRS.OBJECT:352060"/>
+            <property name="has_documentation" value="urn-3:HUL.DRS.OBJECT:35013990"/>
+            <property name="has_methodology" value="urn-3:HUL.DRS.OBJECT:35013988"/>
         </metadataCategory>
         <metadataCategory name="nrsMetadata">
             <property name="resourceNamePattern" value="{n}"/>
@@ -29,7 +29,8 @@
             <property name="alephID" value="hollis-id"/>
         </metadataCategory>
         <metadataCategory name="otherRightsMetadata">
-            <property name="license" value="urn-3:HUL.DRS.OBJECT:352106"/>
+            <property name="license" value="urn-3:HUL.DRS.OBJECT:35013887"/>
+            <property name="license" value="urn-3:HUL.DRS.OBJECT:35013885"/>
         </metadataCategory>
         <directory name="textOutlineTTL">
             <metadataCategory name="fileMetadata">
