--- a/DRS-BATCH-PROCESSING/BB_tbrc/BB_tbrc2drs/project.conf
+++ b/DRS-BATCH-PROCESSING/BB_tbrc/BB_tbrc2drs/project.conf
@@ -36,9 +36,9 @@ For example: http://nrstest.harvard.edu:9031/urn-3:fhcl:679558
             <property name="billingCode" value="FHCL.COLL.TBRC_0001"/>
             <property name="accessFlag" value="R"/>
             <property name="processingLevel" value="minimal"/>
-            <property name="has_methodology" value="urn-3:HUL.DRS.OBJECT:679559"/>
+            <property name="has_documentation" value="urn-3:HUL.DRS.OBJECT:35013990"/>
+            <property name="has_methodology" value="urn-3:HUL.DRS.OBJECT:35013988"/>
             <property name="harvardMetadataLinks" value="Type=Aleph --- Identifier=hollis-id --- Label=HOLLIS-ID"/>
-            <property name="has_documentation" value="urn-3:HUL.DRS.OBJECT:679553"/>
 
 <!-- Producer 826 is the production producer -->
             <!-- <property name="producer" value="Wallman, Jeffrey (id=826)"/> -->
@@ -54,8 +54,8 @@ For example: http://nrstest.harvard.edu:9031/urn-3:fhcl:679558
             <property name="idsDeliverableURNs" value="yes"/>
         </metadataCategory>
         <metadataCategory name="otherRightsMetadata">
-            <property name="license" value="urn-3:HUL.DRS.OBJECT:679555"/>
-         
+            <property name="license" value="urn-3:HUL.DRS.OBJECT:35013887"/>
+            <property name="license" value="urn-3:HUL.DRS.OBJECT:35013885"/>
         </metadataCategory>
         <metadataCategory name="importMetadata">
                  <property name="alephID" value="hollis-id"/>             
