drs-deposit-106 Provide default config for DB facing calls
Installation:
View at:
    https://pypi.org/project/bdrc-DBAppParser/1.0.4/

pip install --upgrade  bdrc-DBAppParser==1.0.4

--- a/DBAppParser/.gitignore
+++ b/DBAppParser/.gitignore
@@ -1,4 +1,10 @@
 # Created by .ignore support plugin (hsz.mobi)
+
+# Pytyhon stuff
+**/venv/**
+**/build/**
+**/dist/**
+**/*.egg-info/**
 ### Python template
 # Byte-compiled / optimized / DLL files
 __pycache__/
