archive-ops-810 Reconfigure db apps config

--- a/DBApps/conf/drsBatch.config
+++ b/DBApps/conf/drsBatch.config
@@ -14,5 +14,7 @@ server = RDSAWSClient
 server = RDSAWSQAClient
 
 [web]
-outlineURI = "https://www.tbrc.org/public?module=outlines&query=outline&arg="
-outlinePerWorkURI = "https://www.tbrc.org/public?module=outline&query=texts&arg="
+# jimk archive-ops-721 - not using eXists
+#outlineURI = "https://www.tbrc.org/public?module=outlines&query=outline&arg="
+#outlinePerWorkURI = "https://www.tbrc.org/public?module=outline&query=texts&arg="
+BUDAKey=<UOM>
